syntax = "proto3";

import "google/protobuf/timestamp.proto";

package nodeservice;

option go_package = "github.com/amimof/blipblop/proto";

service NodeService {
  rpc Join(JoinRequest) returns (JoinResponse) {}
  rpc Subscribe(Node) returns (stream Event) {}
  rpc FireEvent(stream Event) returns (EventAck) {}
}

message Node {
  string id = 1;
}

message Event {
  string name = 1;
  Node node = 2;
  bytes payload = 3;
  EventType type = 4;
}

message EventAck {
  string status = 1;
}

enum EventType {
	ContainerCreate = 0;
	ContainerDelete = 1;
  ContainerUpdate = 2;
}

enum Status {
  JoinFail = 0;
  JoinSuccess = 1;
}

message JoinRequest {
  google.protobuf.Timestamp at = 1;
  Node node = 2;
}

message JoinResponse {
  google.protobuf.Timestamp at = 1;
  Node node = 2;
  Status status = 3;
}
